Style - stylesheet updated

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+    background-color: white;
+}
 body{
 margin:0;
 font-family: sans-serif;
@@ -70,20 +73,15 @@ table,th,td{
         width:100%;
     }
     table,th,td{
-        padding:5px;
+        padding-left:2px;
+        padding-right: 2px;
+        font-size: 10px;
     }
     .display-result td{
-        padding: 20px 5px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
     .input-box{
         width: 90%;
-    }
-}
-@media screen and (max-width:300px) {
-    table,th,td{
-        padding:3px;
-    }
-    .display-result td{
-        padding: 20px 3px;
     }
 }
